--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,20 @@
 /**
+ * Dependencies
+ */
+
+$spacing-unit:     30px;
+
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre,
+ul, ol, dl, figure,
+%vertical-rhythm {
+    margin-bottom: $spacing-unit / 2;
+}
+
+/**
  * Syntax highlighting styles
  */
+
 .highlight {
     background: #fff;
     @extend %vertical-rhythm;
