--- a/css/main.scss
+++ b/css/main.scss
@@ -1,53 +1,50 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
 
+p.lead {
+  margin-top: 1em;
+}
 
+div.bump-down {
+  margin-top: 2em;
+}
 
-// Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+div.stacks {
+  margin-bottom: 1em;
+}
 
-$spacing-unit:     30px;
+iframe {
+    border: 0px;
+}
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+.navbar {
+  border-radius: 0;
+}
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+footer.navbar {
+  margin-top: 2em;
+}
 
-// Width of the content area
-$content-width:    800px;
+div.inline {
+  display: inline-block;
+}
 
-$on-palm:          600px;
-$on-laptop:        800px;
+.icon {
 
+    > svg {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
 
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
+        path {
+            fill: #828282;
+        }
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
         "syntax-highlighting"
 ;
