--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
   <div class="text-center">
     <div class="inline">
       <ul class="nav navbar-nav">
+        <li>{% include icon-linkedin.html username=site.twitter_username %}</li>
         <li>{% include icon-github.html username=site.github_username %}</li>
         <li>{% include icon-twitter.html username=site.twitter_username %}</li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
