--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ div.stacks {
 }
 
 iframe {
-    border: 0px;
+  border: 0px;
 }
 
 .navbar {
@@ -31,18 +31,25 @@ div.inline {
 }
 
 .icon {
-
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: #828282;
-        }
+  > svg {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    path {
+      fill: #828282;
     }
+  }
 }
+
+.icon--linkedin {
+  > svg {
+    path {
+      fill: #fff;
+    }
+  }
+}
+
 
 @media print {
   a[href]:after {
