--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,10 +11,21 @@
     </div>
     <div class="collapse navbar-collapse" id="primary-navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/sample/">Sample Work</a></li>
-        <li><a href="/chess-demo/">Chess Demo</a></li>
-        <li><a href="/navair/">NAVAIR</a></li>
-        <li><a href="/business/">Business Solutions</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sample Work <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/sample-work/chess-toolkit/">Chess Toolkit</a></li>
+            <li><a href="/sample-work/chess-openings/">Chess Openings</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Experience <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/experience/navair/">NAVAIR</a></li>
+            <li><a href="/experience/quetzal/">Quetzal Consulting</a></li>
+            <li><a href="/experience/tamu/">Texas A&amp;M University</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
