add rackspace page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Experience <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
+            <li><a href="/experience/rackspace/">Rackspace</a></li>
             <li><a href="/experience/navair/">NAVAIR</a></li>
             <li><a href="/experience/quetzal/">Quetzal Consulting</a></li>
             <li><a href="/experience/tamu/">Texas A&amp;M University</a></li>
