--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,15 @@
   <link rel="icon" href="/favicon.ico">
   <title>{% if page.title %}{{ site.title | escape }}: {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-73390484-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
   <link rel="stylesheet" href="https://043a96a8a2caa9c57463-9701ce6e6cbd7003c5a8a25a5a69546c.ssl.cf5.rackcdn.com/v1.1/global/css/global.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
