--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,15 +1,14 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+<div class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#primary-navbar">
-        <span class="sr-only">Toggle navigation</span>
+      <a href="/" class="navbar-brand">{{site.title}}</a>
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Steve Ortiz</a>
     </div>
-    <div class="collapse navbar-collapse" id="primary-navbar">
+    <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sample Work <span class="caret"></span></a>
@@ -30,4 +29,4 @@
       </ul>
     </div>
   </div>
-</nav>
+</div>
