add jumbotron and move quote

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,25 @@
 
 {% include navbar.html %}
 
-<div class="container">
-<h2 class="page-header">{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</h2>
-{% if page.quote %}<blockquote>{{ page.quote}}</blockquote>{% endif %}
-{% if page.cite %}<cite>{{ page.cite }}</cite>{% endif %}
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="page-header">{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</h1>
+    <p>{{ page.hero }}</p>
+  </div>
+</div>
 
-{{ content }}
+<div class="container">
+{% if page.quote %}
+  <div class="col-sm-8">
+    {{ content }}
+  </div>
+  <div class="col-sm-4">
+    <blockquote>{{ page.quote}}</blockquote>
+    <cite>{{ page.cite }}</cite>
+  </div>
+{% else %}
+  {{ content }}
+{% endif %}
 </div>
 
 {% include footer.html %}
