update static assets source

--- a/_sass/_my-custom.scss
+++ b/_sass/_my-custom.scss
@@ -41,7 +41,7 @@ i {
 }
 
 .jumbotron {
-    background-image: url(http://5d6e751938179cb4c676-7e78ad4f897ae0179c6a991c235afb37.r3.cf5.rackcdn.com/images/aggie-interns-2015.jpg);
+    background-image: url(https://s3-us-west-2.amazonaws.com/images.ortizaggies.com/aggie-interns-2015.jpg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
