--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sample Work <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/sample-work/chess-toolkit/">Chess Toolkit</a></li>
+            <li><a href="/sample-work/chess-openings/">Chess Openings</a></li>
           </ul>
         </li>
         <li class="dropdown">
